test/valid/tcomp000_sumThree/sumThree.agu
-- Author: tcomp000, Vasco T. Vasconcelos

let main (_) : Unit -> Unit = print(f(5, 6, 7))

let f (x, y, z) : (Int, Int, Int) -> Int = x + y + z

