test/invalid-semantic/56334_undeclaredVariable/undeclaredVariable.agu
-- Author: fc56334, Goncalo Lopes

let x : Int = y + 5